--- a/astronomia/animacion/index.html
+++ b/astronomia/animacion/index.html
@@ -407,8 +407,18 @@
 	   200 vegades.*/
 	// canvas.width / 2 és x de galaxy, es a dir, coloca la galàxia inicialment al centre del canvas o zona de dibuix, width/2 = centre de x
 	// canvas.height / 2 és y de galaxy, es a dir, coloca la galàxia inicialment al centre del canvas o zona de dibuix, height/2 = centre de y
-	// La funcio atemàtica crea numeros aleatories entre 1 i 4 pixels de gran de la galàxies
-	    
+	// La funciò atemàtica crea numeros aleatories entre 1 i 4 pixels de gran de la galàxies
+	    //Math.random() * 3 + 1 // Mida aleatòria entre 1 i 4 píxels perquè Math.random() és una funció que genera un número aleatori entre zero i u
+	    // i si multipliquem per tres donarà un numero entre zero i tres i si li sumem un donarà un numero aleatori entre u i quatre de forma
+	    // que tindrem totes les galàxies de mides aleatòries entre 1 i 4 pixels.Totes les galàxies sortiran al centre de la pantalla perquè
+	    // canvas.width significa  amplada (ancho)de l'àrea de dibux(canvas) i al dividir-ho per dos quedarà al centre de la pantalla
+	     // canvas.height significa  alçada (altura)de l'àrea de dibux(canvas) i al dividir-ho per dos quedarà al centre de la pantalla.
+	    //El mètode push es un sistema que ens permet amb la sintaxi del punt (dot syntax) aplicar al mètode push a objecte galàxies i crear un 
+	    // número de galàxies igual a numGalaxies que esta definit al slider per part del usuari(entre 50 i 500).
+	    // Les galaxies es creen amb un cicle for per no repetir 500 vegades crea una galaxia.S'utilitza un comptador des de i=0 fins a arribar
+	    //a numGalaxies i va augmentant d'un en un perquè és el significat de i++ que es el mateix que i=i+1 i es el mateix que i+=1 
+
+	
         // Inicialitzem les galàxies
         function initGalaxies(numGalaxies) {
             galaxies = [];
